src/app/core/header/header.component.css
body {
  font-family: "FontAwesome", 'Kanit', sans-serif !important;
}

#header {
  width: 100%;
  animation-duration: .7s;
}

#header.sticky {
  z-index: 2;
  position: fixed;
}

#header.sticky .header-logo,
#header.sticky .header-search,
#header.sticky #nav-icon {
  padding: 0.5rem;
}

#header.sticky .standard-logo img {
  max-height: 40px;
  -webkit-transition: .5s ease-in-out;
  -moz-transition: .5s ease-in-out;
  -o-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
}

.standard-logo {
  cursor: pointer;
}

#searchBox {
  background: rgba(255, 255, 255, 0.3);
  border-radius: 10px;
  color: white;
  font-family: "FontAwesome", 'Kanit', sans-serif !important;
  border-color: black;
  padding-right: 2.5rem;
  width: 70%;
}

#searchBox:active,
#searchBox:focus {
  box-shadow: inset 0 0 10px rgba(0, 100, 200, 0.5);
}

#header.sticky #navbar-menu {
  padding-top: 0;
  padding-bottom: 0;
}

.header-wrapper {
  background-color: #333333;
  padding-left: 15px;
  padding-right: 15px;
}

.primary-menu-wrapper {
  padding-left: 15px;
  padding-right: 15px;
  border-bottom: 4px solid black;
  background-color: #808080;
}

.header-logo,
.header-search,
#nav-icon {
  padding: 1rem;
}

.header-logo {
  align-self: center;
}

.header-logo img {
  max-width: 100%;
  max-height: 50px;
  cursor: pointer;
}

.flag-wrapper {
  margin-top: 0.5rem;
}

.flag {
  width: 27px;
  height: 25px;
  border-radius: 10px;
  cursor: pointer;
}

.flag-wrapper>.flag:last-child {
  margin-left: 0.5rem;
}

.login-wrapper {
  padding: 0.5rem;
  text-align: center;
}

.userMenu {
  background-color: transparent;
  border-color: #c3ebf4;
  color: #c3ebf4;
  cursor: pointer;
  padding: 0;
}

.userMenu:hover {
  background-color: #337AB7;
  color: white;
}

.userMenu .dropdown-menu {
  background-color: rgba(0, 0, 0, 0.8) !important;
}

.userMenu .dropdown-item {
  color: white;
}

.userMenu a.dropdown-item:hover {
  color: #2695f7;
  /* box-shadow : 0px 2px 0px 0px #c3ebf4; */
}

.btn-Login {
  background-color: transparent;
  color: #f4cc33;
  border: 1.5px solid #f4cc33;
  border-radius: 15px;
  padding: 5px 15px;
  cursor: pointer;
}

.btn-Login:hover {
  background-color: #F8A422;
}

.btn-Login a {
  color: #f4cc33;
  letter-spacing: 1.5px;
}

.btn-Login:hover a {
  color: white;
}

.btn-Login a:hover {
  text-decoration: none;
}

button:focus,
a:focus {
  outline: none !important
}

/* Menu */

.mainMenu li a {
  font-size: 18px;
  color: white;
  /* transition: all 0.3s; */
}

.mainMenu li:hover>a {
  border-bottom: 4px solid #f4cc33;
  margin-bottom: -0.5rem;
}

.nav-item.dropdown {
  cursor: pointer;
}

/* Dropdown List */

.dropdown-menu {
  padding: 1.5em 0.5em;
  background-color: rgba(0, 0, 0, 0.4) !important;
}

.dropdown-item:focus,
.dropdown-item:hover {
  color: #16181b !important;
  font-weight: bold;
  background-color: #f4cc33;
  border-radius: 5px;
  box-shadow: 0px 2px 0px 0px #f4cc33;
  transition: all 0.1s ease-out;
  -moz-transition: all 0.1s ease-out;
  -webkit-transition: all 0.1s ease-out;
}

.userMenu .dropdown-item:hover,
.userMenu .dropdown-item:focus {
  background-color: #337AB7;
  color: white !important;
  border-radius: 5px;
  box-shadow: 0px 2px 0px 0px #337AB7;
  transition: all 0.1s ease-out;
  -moz-transition: all 0.1s ease-out;
  -webkit-transition: all 0.1s ease-out;
}

/* Side Bar */

#nav-sidebar {
  width: 250px;
  position: fixed;
  top: 0;
  left: -250px;
  height: 100vh;
  z-index: 999;
  background: #333333;
  color: #fff;
  transition: all 0.3s;
  overflow-y: auto;
  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
}

#nav-sidebar.show {
  left: 0;
}

.sidebar-header {
  padding: 20px;
}

.sidebar-content {
  padding: 0.5rem 1.5rem;
}

.overlay {
  position: fixed;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.8);
  z-index: 2;
}

.close-sidebar {
  visibility: hidden;
  opacity: 0;
  position: fixed;
  cursor: pointer;
  right: 10%;
  top: 3%;
  color: #fff;
  z-index: 4;
  -webkit-transition: .4s ease-in-out;
  -moz-transition: .4s ease-in-out;
  -o-transition: .4s ease-in-out;
  transition: .4s ease-in-out;
}

.close-sidebar.show {
  visibility: visible;
  opacity: 1;
}

/* Hamburger Icon */

#nav-icon {
  width: 40px;
  height: 30px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .5s ease-in-out;
  -moz-transition: .5s ease-in-out;
  -o-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  cursor: pointer;
  color: #048bc1;
}

::ng-deep .modal-content {
  border-radius: 20px;
  padding: 10px;
  -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.33);
  -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.33);
  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.33);
  font-family: 'Kanit', sans-serif;
}

#atk-modal-login .modal-dialog,
#atk-modal-forgot .modal-dialog {
  max-width: 450px;
  margin-left: auto;
  margin-right: auto;
}

.modal-open .modal-wrapper {
  display: block;
}

.close {
  cursor: pointer;
}

.or {
  position: relative;
  text-align: center;
}

.or span {
  background: #fff;
  padding: 0 15px;
  position: relative;
  z-index: 1;
}

.or:before {
  background: #ddd;
  content: "";
  display: block;
  height: 1px;
  position: absolute;
  top: 50%;
  width: 100%;
}

.or:before {
  left: 0;
}

.modal-box {
  transition: opacity .3s ease-in-out;
  -webkit-transition: opacity .3s ease-in-out;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  top: 10%;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  z-index: 2;
  background-color: #fff;
  border-radius: 20px;
  -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.33);
  -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.33);
  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.33);
}

.modal-box.show {
  visibility: visible;
  width: 450px;
  padding: 10px;
  opacity: 1;
}
/* ... */

